--- a/store-app/package.json
+++ b/store-app/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.11",
+    "@mui/material": "^5.15.11",
     "@mui/material-nextjs": "^5.15.11",
     "jotai": "^2.7.0",
     "next": "14.1.0",
